--- a/JupyterLab-vim_Tutorial.ipynb
+++ b/JupyterLab-vim_Tutorial.ipynb
@@ -7,30 +7,42 @@
     "tags": []
    },
    "source": [
-    "# Some brief notes on Vim\n",
+    "# JupyterLab Command and JupyterLab Edit\n",
+    "JupyterLab has two different modes when interacting with code in a notebook environment: command mode and edit mode.\n",
     "\n",
-    "Vim is a text editor first released in 1991. It has several convenient keyboard shortcuts that can help with quickly editing a document. These features can be accessed through Vim's different modes: insert, normal, and visual. These features have been brought to JupyterLab through the ```jupyterlab-vim``` extension.\n",
+    "In command mode, the user is not directly editing any particular cells. Rather, the user is navigating the whole notebook and interacting with cells on a larger scale. If you right click on a cell, you should see options to cut, copy, and paste selected cells. Those commands are part of JupyterLab Command mode.\n",
     "\n",
-    "### Things you can do in Vim normal mode\n",
+    "In edit mode, the user is directly editing the contents of a cell. Without ```jupyterlab-vim```, this uses, with exceptions for JupyterLab specific shortcuts, the same keyboard shortcuts that you would use for a processor like Microsoft Word or something simple like Notepad (or whatever equivalent comes to mind for your particular operating system). With the addition of ```jupyterlab-vim```, JupyterLab Edit mode is extended into several additional modes, each tied to Vim editor.\n",
+    "\n",
+    "# Brief notes on Vim\n",
+    "\n",
+    "Vim is a text editor first released in 1991. It has several convenient keyboard shortcuts that can help with quickly editing a document. These features can be accessed through two of Vim's different modes: insert and normal. While insert and normal are not the only vim modes available (visual, command, and replace modes are also implemented), these modes are the relevant modes for understanding the additional features in JupyterLab Command. These features have been brought to JupyterLab through the ```jupyterlab-vim``` extension. If you have used Vim before, most of this next section will be stuff you are already acquainted with. If you haven't used Vim before but you are interested in learning more and applying it to the JupyterLab environment, there are several excellent tutorials for how to use Vim. For now, we will stick to some basics in Vim's normal mode. These things serve as a precursor for how ```jupyterlab-vim``` operates uniquely with the cell-based notebook environment.\n",
+    "\n",
+    "## Things you can do in Vim normal mode\n",
     "When you first edit text in a cell with the Vim extension enabled, you will start with a blinking cursor that indicates you are in normal mode. If you are editing a cell in insert mode, you can press <kbd>Escape</kbd> to enter normal mode.\n",
     "\n",
-    "In normal (and visual?) mode, you can do the following things:\n",
+    "In normal mode, you can do the following things:\n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
-    "<kbd>D</kbd> + <kbd>D</kbd> | This deletes a line and copies it to keyboard\n",
+    "<kbd>D</kbd> + <kbd>D</kbd> | This deletes a line and copies it to the clipboard\n",
+    "<kbd>Y</kbd> + <kbd>Y</kbd> | This copies a line to the clipboard\n",
     "<kbd>P</kbd> | This pastes from the keyboard\n",
     "<kbd>U</kbd> | This will undo an action in normal mode\n",
     "<kbd>O</kbd> | This will add a line after the current line\n",
     "<kbd>K</kbd> | Move up one line\n",
     "<kbd>J</kbd> | Move down one line\n",
+    "<kbd>G</kbd> + <kbd>G</kbd> | Select the first line\n",
+    "<kbd>Shift</kbd> + <kbd>G</kbd> | Select the last line\n",
     "\n",
-    "Versions of these, but applied to cells, also exist. We will learn more about them later! For now, play around a little bit. Below is the classic lorem ipsum text. Try out some of these keystrokes"
+    "Versions of these, but applied to cells in JupyterLab Command mode, also exist. We will learn more about them later! For now, play around a little bit. Below is the classic lorem ipsum text. Try out some of these keystrokes"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "79b04cd2-4eca-44ad-b8c6-350fbb14dd56",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet consectetur adipiscing elit ut aliquam purus sit amet. Facilisi nullam vehicula ipsum a arcu. Faucibus scelerisque eleifend donec pretium. Risus pretium quam vulputate dignissim suspendisse. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Viverra mauris in aliquam sem fringilla ut. Elementum nibh tellus molestie nunc non blandit massa enim nec. Amet est placerat in egestas. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Quis hendrerit dolor magna eget. Nec feugiat in fermentum posuere.\n",
     "\n",
@@ -44,23 +56,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1c9ef47d-940e-42d8-a83c-18e0aa31c7b6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "c0359765-8745-4b2d-a31b-27c9ff11bd13",
+   "metadata": {},
    "source": [
-    "## Switching into Jupyter mode"
+    "## Unimplemented normal mode exercises: 8"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "049622ba-c37b-4d99-84de-487239d7bc40",
+   "id": "b53900b2-dcd1-4bab-b2a1-21e7df0c6343",
    "metadata": {},
    "source": [
-    "## Get used to selecting multiple cells at the same time in both normal and Jupyter\n",
+    "## Include a section on h j k l for navigation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b6be64-0dc6-4690-9e92-3a387a1e84ea",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Get used to moving into/selecting adjacent cells in normal mode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc389105-a2ce-49af-9327-27c8a6ac5d49",
+   "metadata": {},
+   "source": [
+    "For this exercise, create a couple of different cells (does six seem right?) with boolean values that are contingent on other cells having been run beforehand. Put them in a non-standard order. Tell the user to switch between cells in order to have each boolean become true. Mention that switching in this way runs a cell automatically for markdown but not code cells."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22a73e64-c576-467b-b9e5-ba6ab05eb005",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Get used to selecting multiple cells at the same time in normal mode\n",
+    "\n",
+    "Note on this that you can run selected cells using shift enter. This will help with later parts of the tutorial.\n",
     "\n",
     "You can select multiple cells at one time with normal mode and Jupyter mode. In normal mode, you can select these cells using \"ctrl + shift + j\" to select below and \"ctrl + shift + k\" to select above."
    ]
@@ -97,16 +135,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5080356c-1716-4a0d-bd6d-06ea970996a9",
+   "metadata": {},
+   "source": [
+    "## Get used to moving into/selecting the first and last cells in normal mode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28d69569-2cd2-4176-b24b-c9f22e956c6b",
+   "metadata": {},
+   "source": [
+    "Include in this the keybindings. In the last cell of the document, also include how to center the cell. Centering the cell is probably best put here. Be open to changes for this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78248dac-e2d2-4259-94dc-54e37bc677c4",
    "metadata": {},
    "source": [
     "## Getting used to moving cells around\n",
+    "\n",
+    "When implementing this exercise, it may be best to uninstall and reinstall the extension to see if it clears up some of the bugs. Document these results.\n",
+    "\n",
     "There are several ways to move cells around using ```vim``` keybindings. In 'normal' mode, you can use \"ctrl + e\" to move the cell you are interacting with down one cell and \"ctrl + y\" to move the cell up. (Moving up seems to be bugged right now). In 'insert' mode, you cannot use this same approach."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a0eebc0b-0410-4635-9628-4553ab74def9",
    "metadata": {
     "tags": []
@@ -121,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2fba033e-d2af-49d9-860a-affd022c0fc6",
    "metadata": {
     "tags": []
@@ -135,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "aa49f41e-5af2-47af-b15f-a7f11042789c",
    "metadata": {
     "tags": []
@@ -150,83 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "590d899b-850c-4635-935f-eac69d196aeb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
-   "source": [
-    "if third == True:\n",
-    "    print(\"Hooray!\")\n",
-    "else:\n",
-    "    print(\"Sorry, not quite!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a97cfec3-8263-4afd-ae5d-14614ef43237",
-   "metadata": {},
-   "source": [
-    "## Repeat that exercise, but with the Jupyter command bindings\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "538a381e-8f75-4a3b-89ed-e7276bd9c475",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Do not alter or move this cell\n",
-    "\n",
-    "second = False\n",
-    "third = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "447b214b-6372-4660-be49-566de1810b1e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Put this cell second\n",
-    "\n",
-    "second = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "19a2ff6b-1885-48d0-8e2c-350065875584",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Put this cell third\n",
-    "\n",
-    "if second == True:\n",
-    "    third = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "66d01bac-ce60-4f17-8b4d-d5f535c22cc8",
    "metadata": {
     "tags": []
    },
@@ -251,7 +233,9 @@
    "id": "c6d0e9bf-3fde-478d-b87b-36a24964eab9",
    "metadata": {},
    "source": [
-    "## Get used to adding cells below and above using insert mode"
+    "## Get used to inserting cells below and above using normal mode\n",
+    "\n",
+    "Have a cell around which the user inserts cells. Tell the user to insert a certain number of cells above and a certain number of cells below using the appropriate shortcuts (maybe 3 or 4). Attempt an implementation where, using [this tutorial](https://www.geeksforgeeks.org/read-json-file-using-python/https://www.geeksforgeeks.org/read-json-file-using-python), the notebook that the user has edited is read in and the markdown cell explaining the exercise is identified. If this is possible, the rest should just be array manipulation. Spend no more than 30 minutes attempting the implementation. This is a reach goal."
    ]
   },
   {
@@ -264,10 +248,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e0c71d-d46e-420f-ac55-8fd154ce3ba9",
+   "id": "077ab977-9da2-489e-a6f2-1b7617beaea3",
    "metadata": {},
    "source": [
-    "## Repeat this exercise for Jupyter command bindings"
+    "## Go over how to yank, delete, and paste cells\n",
+    "\n"
    ]
   },
   {
@@ -288,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "f4c6ff88-941c-4a88-988c-998b316143af",
    "metadata": {
     "tags": []
@@ -296,14 +281,6 @@
    "outputs": [],
    "source": [
     "## I want to be turned into a markdown cell :)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "077ab977-9da2-489e-a6f2-1b7617beaea3",
-   "metadata": {},
-   "source": [
-    "## Go over how to yank, delete, and paste cells"
    ]
   },
   {
@@ -316,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "7be6fb30-1174-4282-b4d3-20f1e18f1244",
    "metadata": {
     "tags": []
@@ -331,12 +308,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e942c351-8a61-45b9-9f16-559818bd4bc4",
+   "cell_type": "markdown",
+   "id": "a4f83e91-c0ff-4522-aec7-a259ebec40cb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Switching into Jupyter Command mode (copying relevant normal exercises) (6 exercises to go)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b042daaa-b5c3-4eb6-b03e-55b722475c15",
    "metadata": {},
+   "source": [
+    "## Repeat that exercise, but with the Jupyter command bindings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "538a381e-8f75-4a3b-89ed-e7276bd9c475",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Do not alter or move this cell\n",
+    "\n",
+    "second = False\n",
+    "third = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "447b214b-6372-4660-be49-566de1810b1e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Put this cell second\n",
+    "\n",
+    "second = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "19a2ff6b-1885-48d0-8e2c-350065875584",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Put this cell third\n",
+    "\n",
+    "if second == True:\n",
+    "    third = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "66d01bac-ce60-4f17-8b4d-d5f535c22cc8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if third == True:\n",
+    "    print(\"Hooray!\")\n",
+    "else:\n",
+    "    print(\"Sorry, not quite!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba569b28-6d7d-4ae3-bb6a-ae32c9441c98",
+   "metadata": {},
+   "source": [
+    "## Hiding code cells (2 exercises) for individual code cells and all code cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16889f38-684e-4aa5-856a-2d2b8b57e366",
+   "metadata": {},
+   "source": [
+    "Somewhere in all this mess, you need to explain that there are two different clipboards for the two different modes, JupyterLab Command and JupyterLab edit."
+   ]
   }
  ],
  "metadata": {
