--- a/01.02-vim_jupyter.ipynb
+++ b/01.02-vim_jupyter.ipynb
@@ -35,15 +35,16 @@
    "id": "1af38aae-5036-4856-8790-f2eba63f16ac",
    "metadata": {},
    "source": [
-    "## 9) Selecting adjacent cells"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "87dfda39-2a08-47e6-98f6-c09c512339a7",
-   "metadata": {},
-   "source": [
-    "Copy exercise 1"
+    "## 9) Selecting adjacent cells in Jupyter Command\n",
+    "\n",
+    "This exercise, much like exercise 1, shows you how to select nearby cells from the one you are currently selecting. This time, you will be in Jupyter Command mode for it. These are the shortcuts:\n",
+    "\n",
+    "Keystrokes | Effects\n",
+    ":---:|---\n",
+    "<kbd>K</kbd> | Select the cell above\n",
+    "<kbd>J</kbd> | Select the cell below\n",
+    "\n",
+    "Using only these keystrokes and <kbd>Shift</kbd> + <kbd>Enter</kbd>, run the following cells in the correct order, as listed in the cells themselves, to finish the exercise."
    ]
   },
   {
@@ -51,7 +52,16 @@
    "id": "c929f780-6d77-4405-bfbc-244e46fb335f",
    "metadata": {},
    "source": [
-    "## 10) Selecting multiple cells"
+    "## 10) Selecting multiple cells in Jupyter Command\n",
+    "\n",
+    "Now we will go over how to select multiple cells in Jupyter Command. To do this use:\n",
+    "\n",
+    "Keystrokes | Effects\n",
+    ":---:|---\n",
+    "<kbd>Shift</kbd> + <kbd>K</kbd> | Extend selection to the cell above\n",
+    "<kbd>Shift</kbd> + <kbd>J</kbd> | Extend selection to the cell below\n",
+    "\n",
+    "Like before, use only these keystrokes and <kbd>Shift</kbd> + <kbd>Enter</kbd> to run the following cells all at once and finish the exercise."
    ]
   },
   {
@@ -67,7 +77,17 @@
    "id": "8a7c3584-e50b-41e7-9689-5731e5e3fc78",
    "metadata": {},
    "source": [
-    "## 11) Selecting the first and last cells"
+    "## 11) Selecting the first and last cells in Jupyter Command\n",
+    "\n",
+    "It is also possible to select the first and last cells in Jupyter Command. The shortcuts are simpler as well. To demonstrate how to do this, we have the following shortcuts:\n",
+    "\n",
+    "Keystrokes | Effects\n",
+    ":---:|---\n",
+    "<kbd>G</kbd> + <kbd>G</kbd> | Select the first cell in the Jupyter Notebook\n",
+    "<kbd>Shift</kbd> + <kbd>G</kbd> | Select the last cell in the Jupyter Notebook\n",
+    "<kbd>Z</kbd> + <kbd>Z</kbd> | Center the selected cell on the screen\n",
+    "\n",
+    "Using these keystrokes, move to the top of this notebook and move to the bottom of this notebook. When at the last cell of the notebook, center it on the screen. When you are done, move onto exercise 12."
    ]
   },
   {
@@ -83,7 +103,16 @@
    "id": "60a92be4-31f2-4aa6-9b12-f93d22f1dacb",
    "metadata": {},
    "source": [
-    "## 12) Moving cells around"
+    "## 12) Moving cells around in Jupyter Command\n",
+    "\n",
+    "Moving cells around can also be done in Jupyter Command. This is one of very few things with keyboard shortcuts that is identical in Jupyter Command and in normal mode. This can be done with:\n",
+    "\n",
+    "Keystrokes | Effects\n",
+    ":---:|---\n",
+    "<kbd>Ctrl</kbd> + <kbd>Y</kbd> | Move the current cell up\n",
+    "<kbd>Ctrl</kbd> + <kbd>E</kbd> | Move the current cell down\n",
+    "\n",
+    "Using these keystrokes as well as those for selecting adjacent cells, move the cells below into the order listed by the cells in order to complete the exercise. For the fun of it, there will be blocks of cells that have to be moved all together. Select these blocks using the shortucts you learned in exercise 10. "
    ]
   },
   {
@@ -91,7 +120,9 @@
    "id": "87c68cf9-df97-4f36-a663-53a47fcb8ee6",
    "metadata": {},
    "source": [
-    "Copy exercise 4"
+    "Copy exercise 4\n",
+    "\n",
+    "Also make sure that the exercise includes the movement of multiple cells at once"
    ]
   },
   {
