--- a/01.00-vim_intro.ipynb
+++ b/01.00-vim_intro.ipynb
@@ -57,6 +57,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cdb39c6-dbb3-474b-b4a7-df438358dedf",
+   "metadata": {},
+   "source": [
+    "## Insert Mode\n",
+    "\n",
+    "For users who haven't seen Vim before, it's worth knowing one useful fact. If you want to edit the contents of a cell and not just move some lines around, you can enter into insert mode using <kbd>I</kbd> from normal mode. This will let you edit the text of a cell as usual."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83b6be64-0dc6-4690-9e92-3a387a1e84ea",
    "metadata": {
     "tags": []
