--- a/01.01-vim_normal.ipynb
+++ b/01.01-vim_normal.ipynb
@@ -223,7 +223,7 @@
     "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
     "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>O</kbd> | Insert a cell below\n",
     "\n",
-    "Using these shortcuts, add three cells above and below the cell marked for this exercise. Once you're done, run the code block labeled as the verifier to check that you have the right number of cells."
+    "Using these shortcuts, add three empty cells above and below the cell marked for this exercise. Once you're done, run the code block labeled as the verifier to check that you have the right number of cells."
    ]
   },
   {
@@ -247,7 +247,7 @@
    "id": "49ffc93a-a007-4a72-beb9-01e48db5a9d8",
    "metadata": {},
    "source": [
-    "## 6) Go over how to yank, delete, and paste cells\n",
+    "## 6) Yanking, pasting, and deleting cells\n",
     "\n",
     "If you want to copy a cell, delete a cell, or paste a cell anywhere in the notebook, there are ways to do that as well. To do it, use the following:\n",
     "\n",
@@ -326,7 +326,7 @@
     "Keystrokes | Effects\n",
     ":---:|---\n",
     "<kbd>-</kbd> | Split the cell at the cursor\n",
-    "<kbd>Shift</kbd> + <kbd>m</kbd> | Merge all selected cells into one cell\n",
+    "<kbd>Shift</kbd> + <kbd>M</kbd> | Merge all selected cells into one cell\n",
     "\n",
     "On splitting a cell, the cell will be split not only on a line, but right down to the very character that is selected by the cursor in normal mode. Using Vim keybindings to select multiple cells for merging, splitting, and deleting, complete the following exercise:"
    ]
